fix stupid spacing

--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -1,3 +1,4 @@
+
 .BPlaceholderImg {
   font-size: 1.125rem;
   text-anchor: middle;
@@ -11,6 +12,21 @@
     font-size: 3.5rem;
   }
 }
+
+
+.h1wrapper {
+  @media (max-width: 991.98px) {
+      h1{
+        padding-bottom: calc(1rem + 0.9vw);
+        font-size: 2.125rem; /* 1.125rem is small enough, so RFS won't rescale this */
+      }
+    }
+    
+    h1 {
+      padding-bottom: calc(0.25rem + 0.9vw);
+    }
+  }
+
 
 .b-example-divider {
   height: 3rem;
